@@ -1,10 +1,11 @@
-2010-08-14  Asa Ayers  <Asa.Ayers@Gmail.com>
+2010-08-19  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Ticket 30 (related to #23) - ItemAuditor is back to counting items in the mailbox, but will subtract items purchased from the AH or COD mail from its item counts.
+- Added a menu to allow the user to see what is to be crafted, only what you hae mats for, or view everything so you can see why something isn't to be crafted.
 
 2010-08-14  Asa Ayers  <Asa.Ayers@Gmail.com>
 
-- Ticket 29 - Changed the Insufficient COD alert to use a case-insensitive comparison on character names. 
+- Ticket 29 - Changed the Insufficient COD alert to use a case-insensitive comparison on character names.
 
 2010-08-12  Asa Ayers  <Asa.Ayers@Gmail.com>
 
